--- a/ssis_app/static/style.css
+++ b/ssis_app/static/style.css
@@ -15,6 +15,15 @@
     font-family: "Roboto";
 }
 
+.homepage-bg img {
+    position: absolute;
+    border-radius: 10px;
+    top: 90px;
+    left: 250px;
+    width: 82%;
+    height: 78%;
+}
+
 /* logo */
 .nav-logo {
     justify-content: center;
@@ -45,7 +54,7 @@
 }
 
 .navbar {
-    width: 100%;
+    width: 84%;
     height: 70px;
     position: fixed; 
     background-color: white;
@@ -349,7 +358,7 @@ th {
 
 .custom-add-button {
     position: absolute;
-    right: 20px;
+    right: 25px;
     top: 15px;
 }
 
@@ -573,4 +582,34 @@ th {
 
 .btn-done:active {
     transform: translateY(1px);
+}
+
+/* profile */
+.profile img {
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 25%;
+    right: 180px;
+    border-radius: 100%;
+    border: 3px solid var(--pinkB);
+}
+
+.profile input {
+    position: absolute;
+    top: 100px;
+    right: 100px;
+}
+
+.upload-image img {
+    width: 50px;
+    position: absolute;
+    top: 61%;
+    right: 210px;
+    border-radius: 100%;
+    cursor: pointer;
+}
+
+.upload-image:hover img {
+    transform: scale(102%);
 }
